[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-image-bot"
version = "1.0.0"
description = "Telegram bot for AI image generation using Google Generative AI (Gemini)"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot~=22.4",
    "google-generativeai~=0.8",
    "python-dotenv~=1.1",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
exclude = ["lib*", "attached_assets*"]
